--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <header>
             <nav class ="header__nvbr cntnr--wdth cntnr--mrgn-auto cntnr--flx cntnr--flx-btwn">
-                <img src ="./assets/logo.svg" alt ="Icon of the page official">
-                <img class ="elmt--dlt" src ="./assets/menu.svg" alt ="Icon of menu">
+                <img src ="./assets/logo.svg" alt ="Icon of the page official" loading ="lazy">
+                <img class ="elmt--dlt" src ="./assets/menu.svg" alt ="Icon of menu" loading ="lazy">
                 <ul class ="nvbr__tbl fnt--smll">
                    <li><a class ="elmt--clr-blck" href ="">Pricing</a></li>
                    <li><a class ="elmt--clr-blck" href ="">Support</a></li> 
@@ -33,11 +33,11 @@
             </nav>
         </header>
 
-        <main class ="cntnr--wdth cntnr--mrgn-auto">
+        <main class ="main__cntnr cntnr--grd cntnr--wdth cntnr--mrgn-auto">
             <figure class ="cntnr--ft-cntnt cntnr--mrgn-auto">
-                <img class ="img__phone main__img" src ="./assets/feed.png" alt ="Picture of a laptop">
+                <img class ="img__phone main__img" src ="./assets/feed.png" alt ="Picture of a laptop" loading ="lazy">
             </figure>
-            <section class ="fnt--smll">
+            <section class ="main__sctn__frst fnt--smll">
                 <h1 class ="fnt--lrg">Your weekly personal feed digest.</h1>
                 <p class ="cntnt__prgrph">
                     With indieBrew, get personal feeds from resources all around the web, including Reddit, 
@@ -49,34 +49,34 @@
                     </a>
                 </button>
                 <figure class ="sctn__fgr cntnr--flx">
-                    <img class ="fgr__img" src ="./assets/userAvatar01.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar02.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar03.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar04.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar05.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar06.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar07.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar08.svg" alt ="Picture of an user">
-                    <img class ="fgr__img" src ="./assets/userAvatar09.svg" alt ="Picture of an user">
+                    <img class ="fgr__img" src ="./assets/userAvatar01.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar02.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar03.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar04.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar05.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar06.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar07.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar08.svg" alt ="Picture of an user" loading ="lazy">
+                    <img class ="fgr__img" src ="./assets/userAvatar09.svg" alt ="Picture of an user" loading ="lazy">
                 </figure>
                 <p class ="fnt--smll">Join <span>32,642</span> IndieBrewers in curationf their personal digest.</p>
             </section>
             <section class ="main__sctn__scnd cntnr--grd fnt--smll">
                 <figure class ="cntnr--ft-cntnt cntnr--mrgn-auto">
-                    <img class ="sctn__scnd_icons main__img" src ="./assets/icons.png" alt ="Picture that content icons of pages">
+                    <img class ="sctn__scnd_icons main__img" src ="./assets/icons.png" alt ="Picture that content icons of pages" loading ="lazy">
                 </figure>
                 <div class ="sctn__curate">
-                    <h2 class ="fnt--mdm">Curate your feed from dozens of resources.</h2>
+                    <h2 class ="div__sbttl fnt--mdm">Curate your feed from dozens of resources.</h2>
                     <p class ="cntnt__prgrph">
                         We cover all major platform where one could want to curate their feed from. Reddit, ProductHunt, IndieHacker, and so much more.
                     </p>
                     <a class ="elmt--clr-prpl" href ="">See full list of resources -></a>
                 </div>
                 <figure class ="cntnr--ft-cntnt cntnr--mrgn-auto">
-                    <img class ="sctn__scnd__phone main__img" src ="./assets/phone.png" alt ="Picture of a phone">
+                    <img class ="sctn__scnd__phone main__img" src ="./assets/phone.png" alt ="Picture of a phone" loading ="lazy">
                 </figure>
                 <div class ="sctn__access">
-                    <h2 class ="fnt--mdm">Access your feed form the comfort of your phone.</h2>
+                    <h2 class ="div__sbttl fnt--mdm">Access your feed form the comfort of your phone.</h2>
                     <p class ="cntnt__prgrph">
                         With native apps for both iOS and Android accessing your curated content has never been easier.
                     </p>
@@ -86,7 +86,7 @@
         </main>
 
         <footer class ="footer__cntnr cntnr--wdth cntnr--mrgn-auto fnt--smll">
-            <div>
+            <div class ="footer__div">
                 <h3>IndiwBrew</h3>
                 <p class ="cntnt__prgrph">
                     With IndieBrew, get personal feeds from resources all around the web, including Reddit, HackerNews, and much more.
