--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                    <li><a class ="elmt--clr-blck" href ="">Pricing</a></li>
                    <li><a class ="elmt--clr-blck" href ="">Support</a></li> 
                     <button class ="bttn">
-                        <a class ="bttn__lnk" href ="">
+                        <a class ="bttn__lnk" href ="./login.html">
                             <span class ="bttn__lnk__spn">Get Started</span>
                         </a>
                     </button>
@@ -44,7 +44,7 @@
                     HackerNews, IndieHacker and much more.
                 </p>
                 <button class ="bttn">
-                    <a class ="bttn__lnk" href ="">
+                    <a class ="bttn__lnk" href ="./login.html">
                         <span class ="bttn__lnk__spn">Get Started</span>
                     </a>
                 </button>
